feat: add animations

--- a/src/index.html
+++ b/src/index.html
@@ -35,11 +35,11 @@
             <div class="instagram hero__instagram"><a href="#" class="instagram__link">INSTAGRAM</a></div>
             <div class="container">
                 <div class="hero__content">
-                    <h1 class="title hero__title">
+                    <h1 class="title hero__title animate__animated animate__fadeIn wow">
                         <span class="title__text">турецкий ремонт в&nbsp</span><span class="title__text_primary">Ростове-на-дону</span>
                     </h1>
-                    <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
-                    <div class="buttons hero__buttons">
+                    <p class="hero__text animate__animated animate__fadeIn wow">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
+                    <div class="buttons hero__buttons animate__animated animate__fadeInLeft wow">
                         <button class="button hero__button button_primary" data-toggle="modal">Рассчитать стоимость</button>
                         <button class="button hero__button button_transparent">Отправить заявку</button>
                     </div>
@@ -54,11 +54,11 @@
                 <div class="row projects__content">
                     <div class="col-50">
                         <div class="section-title section-title_left projects__section-title">
-                            <h2 class="section-title__heading section-title__heading_primary">Завершенные<div class="section-title__word">проекты</div></h2>
-                            <p class="section-title__text">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
+                            <h2 class="section-title__heading section-title__heading_primary animate__animated animate__fadeInDown wow">Завершенные<div class="section-title__word">проекты</div></h2>
+                            <p class="section-title__text animate__animated animate__fadeInDown wow">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
                         </div>
                         <!-- /.section-title -->
-                        <div class="swiper projects__swiper">
+                        <div class="swiper projects__swiper animate__animated animate__fadeIn wow">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide swiper-slide-row">
                                     <div class="swiper-slide__text">
@@ -133,7 +133,7 @@
                     </div>
                     <!-- /.col-50 -->
                     <div class="col-50">
-                        <div class="swiper projects__swiper">
+                        <div class="swiper projects__swiper animate__animated animate__fadeInRight wow">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <img src="./img/project-1.webp" alt="project-1">
@@ -160,20 +160,20 @@
         <!-- /.projects -->
         <section class="section control">
             <div class="container">
-                <div class="section-title control__section-title">
+                <div class="section-title control__section-title animate__animated animate__fadeInDown wow">
                     <h2 class="section-title__heading section-title__heading_white">онлайн контроль</h2>
                     <div class="section-title__image">
                         <img src="./img/control.svg" alt="control">
                     </div>
                 </div>
                 <!-- /.section-title -->
-                <div class="video control__video">
+                <div class="video control__video animate__animated animate__fadeIn wow">
                     <button class="video__play"></button>
                 </div>
                 <!-- /.control__video -->
-                <p class="section__text control__text">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
+                <p class="section__text control__text animate__animated animate__fadeInDown wow">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
                 <!-- /.section__text control__text -->
-                <form class="control__form">
+                <form class="control__form animate__animated animate__fadeIn wow">
                     <div class="control__input-group">
                         <label for="control-name" class="label control__label label_gray">Имя</label>
                         <input id="control-name" type="text" class="input control__input input_light" placeholder="Как вас зовут:">
@@ -196,7 +196,7 @@
         <!-- /.section.control -->
         <section class="section repair-types">
             <div class="container">
-                <div class="section-title repair-types__section-title">
+                <div class="section-title repair-types__section-title animate__animated animate__fadeInDown wow">
                     <h2 class="section-title__heading">Виды ремонта</h2>
                     <div class="section-title__image">
                         <img src="./img/repair.svg" alt="repair">
@@ -204,7 +204,7 @@
                 </div>
                 <!-- /.section-title -->
                 <div class="row">
-                    <div class="col-30">
+                    <div class="col-30 animate__animated animate__fadeInLeft wow">
                         <div class="card repair-types__card">
                             <div class="card__image">
                                 <img src="./img/repair-1.webp" alt="repair">
@@ -225,7 +225,7 @@
                         </div>
                     </div>
                     <!-- /.col-30 -->
-                    <div class="col-30">
+                    <div class="col-30 animate__animated animate__fadeInLeft wow">
                         <div class="card repair-types__card">
                             <div class="card__image">
                                 <img src="./img/repair-2.webp" alt="repair">
@@ -246,7 +246,7 @@
                         </div>
                     </div>
                     <!-- /.col-30 -->
-                    <div class="col-30">
+                    <div class="col-30 animate__animated animate__fadeInLeft wow">
                         <div class="card repair-types__card">
                             <div class="card__image">
                                 <img src="./img/repair-3.webp" alt="repair">
@@ -288,16 +288,16 @@
         <!-- /.repair-styles -->
         <section class="section design-project">
             <div class="container">
-                <div class="section-title design-project__section-title">
+                <div class="section-title design-project__section-title animate__animated animate__fadeInDown wow">
                     <h2 class="section-title__heading design-project__heading">Дизайн проект</h2>
                     <div class="section-title__image">
                         <img src="./img/design.svg" alt="design">
                     </div>
                 </div>
                 <!-- /.section-title -->
-                <p class="section__description design-project__description">Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно удешевляет материалы и сокращает время ремонтных работ</p>
+                <p class="section__description design-project__description animate__animated animate__fadeInDown wow">Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно удешевляет материалы и сокращает время ремонтных работ</p>
                 <div class="row">
-                    <div class="col-30">
+                    <div class="col-30 animate__animated animate__fadeInLeft wow">
                         <div class="card design-project__card">
                             <div class="card__image design-project__image">
                                 <img src="./img/design-1.webp" alt="Минимальный">
@@ -314,7 +314,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-30">
+                    <div class="col-30 animate__animated animate__fadeInLeft wow">
                         <div class="card design-project__card">
                             <div class="card__image design-project__image">
                                 <img src="./img/design-2.webp" alt="Стандартный">
@@ -334,7 +334,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-30">
+                    <div class="col-30 animate__animated animate__fadeInLeft wow">
                         <div class="card design-project__card">
                             <div class="card__image design-project__image">
                                 <img src="./img/design-3.webp" alt="Полный">
@@ -369,11 +369,11 @@
                 <div class="row">
                     <div class="working-methods__text">
                         <div class="section-title section-title_left projects__section-title">
-                            <p class="section-title__subtitle">как мы работаем</p>
-                            <h2 class="section-title__heading section-title__heading_primary">6 шагов<div class="section-title__word">до цели</div></h2>
+                            <p class="section-title__subtitle animate__animated animate__fadeIn wow">как мы работаем</p>
+                            <h2 class="section-title__heading section-title__heading_primary animate__animated animate__fadeInDown wow">6 шагов<div class="section-title__word">до цели</div></h2>
                         </div>
                         <!-- /.section-title -->
-                        <div class="swiper working-methods__swiper">
+                        <div class="swiper working-methods__swiper animate__animated animate__fadeInLeft wow">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__progress-number"></div>
@@ -434,7 +434,7 @@
                     <!-- /.working-method__text -->
                     <div class="working-methods__image">
                         <div class="swiper working-methods__swiper">
-                            <div class="swiper-navigation row">
+                            <div class="swiper-navigation row animate__animated animate__fadeIn wow">
                                 <div class="col-30">
                                     <div class="swiper-navigation__card" data-navigation-number="0">
                                         <div class="swiper-navigation__number">01</div>
@@ -485,7 +485,7 @@
                                 <!-- /.col-30 -->
                             </div>
                             <!-- /.swiper__navigation -->
-                            <div class="swiper-wrapper">
+                            <div class="swiper-wrapper animate__animated animate__fadeIn wow">
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__image"><img src="./img/method-1.webp" alt="method"></div>
                                 </div>
@@ -524,7 +524,7 @@
         <!-- /.working-methods section section_dark -->
         <section class="section command">
             <div class="container">
-                <div class="section-title">
+                <div class="section-title animate__animated animate__fadeInDown wow">
                     <h2 class="section-title__heading">Наша команда</h2>
                     <div class="section-title__image">
                         <img src="./img/command.svg" alt="command">
@@ -538,7 +538,7 @@
         <section class="section clients">
             <div class="container">
                 <div class="section-title">
-                    <h2 class="section-title__heading">Наши клиенты</h2>
+                    <h2 class="section-title__heading animate__animated animate__fadeInDown wow">Наши клиенты</h2>
                     <div class="section-title__image">
                         <img src="./img/clients.svg" alt="clients">
                     </div>
