--- a/src/index.html
+++ b/src/index.html
@@ -225,7 +225,7 @@
                         </div>
                     </div>
                     <!-- /.col-30 -->
-                    <div class="col-30 animate__animated animate__fadeInLeft wow">
+                    <div class="col-30 animate__animated animate__fadeInLeft wow animate__delay-1s">
                         <div class="card repair-types__card">
                             <div class="card__image">
                                 <img src="./img/repair-2.webp" alt="repair">
@@ -246,7 +246,7 @@
                         </div>
                     </div>
                     <!-- /.col-30 -->
-                    <div class="col-30 animate__animated animate__fadeInLeft wow">
+                    <div class="col-30 animate__animated animate__fadeInLeft wow animate__delay-2s">
                         <div class="card repair-types__card">
                             <div class="card__image">
                                 <img src="./img/repair-3.webp" alt="repair">
@@ -314,7 +314,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-30 animate__animated animate__fadeInLeft wow">
+                    <div class="col-30 animate__animated animate__fadeInLeft wow animate__delay-1s">
                         <div class="card design-project__card">
                             <div class="card__image design-project__image">
                                 <img src="./img/design-2.webp" alt="Стандартный">
@@ -334,7 +334,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-30 animate__animated animate__fadeInLeft wow">
+                    <div class="col-30 animate__animated animate__fadeInLeft wow animate__delay-2s">
                         <div class="card design-project__card">
                             <div class="card__image design-project__image">
                                 <img src="./img/design-3.webp" alt="Полный">
