--- a/src/index.html
+++ b/src/index.html
@@ -550,53 +550,71 @@
         <!-- /.clients -->
     </main>
     <!-- /.main -->
-    <footer class="footer section">
-        <div class="container">
-            <div class="form-wrap">
-                <p class="footer__form-text">Остались вопросы?</p>
-                <form class="footer__form">
-                    <div class="footer__input-group">
-                        <label for="footer-name" class="label footer__label label_light">Имя</label>
-                        <input id="footer-name" type="text" class="input footer__input input_dark" placeholder="Как вас зовут:">
-                    </div>
-                    <!-- /.footer__input-group -->
-                    <div class="footer__input-group">
-                        <label for="footer-phone" class="label footer__label label_light">Телефон</label>
-                        <input id="footer-phone" type="tel" class="input footer__input input_dark" placeholder="Ваш номер телефона:">
-                    </div>
-                    <!-- /.footer__input-group -->
-                    <div class="footer__input-group footer__input-group_full">
-                        <label for="footer-question" class="label footer__label label_light">Вопрос</label>
-                        <input id="footer-question" type="text" class="input footer__input input_dark" placeholder="Я хочу спросить:">
-                    </div>
-                    <!-- /.footer__input-group -->
-                    <div class="policy footer__policy">
-                        <input id="footer-agree" type="checkbox" class="checkbox policy__checkbox" checked>
-                        <label for="footer-agree" class="policy__label policy__label_light">Я соглашаюсь с обработкой данных</label>
-                    </div>
-                    <button class="button footer__button button_primary">Отправить</button>
-                </form>
-                <!-- /.footer__form -->
-            </div>
-            <!-- /.form-wrap -->
-            <div class="menu">
-                <div class="logo menu__logo">Repair Design Project</div>
-                <nav class="nav menu__nav">
-                    <a href="#" class="nav__link">Главная</a>
-                    <a href="#" class="nav__link">ПРоекты</a>
-                    <a href="#" class="nav__link">Замер</a>
-                    <a href="#" class="nav__link">Команда</a>
-                    <a href="#" class="nav__link">Отзывы</a>
-                    <a href="#" class="nav__link">Контакты</a>
-                </nav>
-                <div class="contacts menu__contacts">
-                    <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-                    <button class="button contacts__button button_primary" data-toggle="modal">Заказать звонок</button>
+    <footer class="footer">
+        <div class="footer__content">
+            <div class="container">
+                <div class="form-wrap footer__form-wrap">
+                    <h3 class="footer__title">Остались вопросы?</h3>
+                    <form class="footer__form">
+                        <div class="footer__input-group">
+                            <label for="footer-name" class="label footer__label label_light">Имя</label>
+                            <input id="footer-name" type="text" class="input footer__input input_dark" placeholder="Как вас зовут:">
+                        </div>
+                        <!-- /.footer__input-group -->
+                        <div class="footer__input-group">
+                            <label for="footer-phone" class="label footer__label label_light">Телефон</label>
+                            <input id="footer-phone" type="tel" class="input footer__input input_dark" placeholder="Ваш номер телефона:">
+                        </div>
+                        <!-- /.footer__input-group -->
+                        <div class="footer__input-group footer__input-group_full">
+                            <label for="footer-question" class="label footer__label label_light">Вопрос</label>
+                            <input id="footer-question" type="text" class="input footer__input input_dark" placeholder="Я хочу спросить:">
+                        </div>
+                        <!-- /.footer__input-group -->
+                        <div class="policy footer__policy">
+                            <input id="footer-agree" type="checkbox" class="checkbox policy__checkbox" checked>
+                            <label for="footer-agree" class="policy__label policy__label_light">Я соглашаюсь с обработкой данных</label>
+                        </div>
+                        <button class="button footer__button button_primary">Отправить</button>
+                    </form>
+                    <!-- /.footer__form -->
                 </div>
+                <!-- /.form-wrap -->
+                <p class="footer__text">Ростов на дону, Торговый центр Plaza
+                    Прямой телефон +7 (999) 768 32 99</p>
+                <!-- /.footer__text -->
+                <div class="footer__links">
+                    <a href="mailto:sinegamy11@gmail.com" class="footer__link footer__link_mail"></a>
+                    <a href="https://www.instagram.com/adam_ilya11/" class="footer__link footer__link_instagram"></a>
+                </div>
+                <!-- /.footer__links -->
+                <div class="map footer__map"></div>
             </div>
-            <!-- /.menu -->
+            <!-- /.container -->
+            <div class="footer__menu">
+                <div class="container">
+                    <div class="menu">
+                        <div class="logo menu__logo">Repair Design Project</div>
+                        <nav class="nav menu__nav">
+                            <a href="#" class="nav__link">Главная</a>
+                            <a href="#" class="nav__link">ПРоекты</a>
+                            <a href="#" class="nav__link">Замер</a>
+                            <a href="#" class="nav__link">Команда</a>
+                            <a href="#" class="nav__link">Отзывы</a>
+                            <a href="#" class="nav__link">Контакты</a>
+                        </nav>
+                        <div class="contacts menu__contacts">
+                            <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
+                            <button class="button contacts__button button_primary" data-toggle="modal">Заказать звонок</button>
+                        </div>
+                    </div>
+                    <!-- /.menu -->
+                </div>
+                <!-- /.container -->
+            </div>
+            <!-- /.footer__menu -->
         </div>
-        <!-- /.container -->
+        <!-- /.footer__content -->
     </footer>
     <!-- /.footer -->
     <div class="modal">
