feat: add command section

--- a/src/index.html
+++ b/src/index.html
@@ -525,14 +525,54 @@
         <section class="section command">
             <div class="container">
                 <div class="section-title animate__animated animate__fadeInDown wow">
-                    <h2 class="section-title__heading">Наша команда</h2>
+                    <h2 class="section-title__heading section-title__heading_white">Наша команда</h2>
                     <div class="section-title__image">
                         <img src="./img/command.svg" alt="command">
                     </div>
                 </div>
                 <!-- /.section-title -->
+                <p class="section__description section__description_white command__description animate__animated animate__fadeInDown wow">Наша команда помогла стать счастливее более чем 500 семьям, и мы не собираемся останавливаться</p>
+                <!-- /.section__description command__description-->
+                <div class="row">
+                    <div class="card command__card animate__animated animate__fadeInLeft wow">
+                        <div class="card__icon"><img src="./img/idea-icon.svg" alt="idea"></div>
+                        <div class="card__image">
+                            <img src="./img/command-1.webp" alt="repair">
+                        </div>
+                        <div class="card__text command__card-text">
+                            <div class="card__name">Алексей&nbsp;Колмаков</div>
+                            <p class="card__role">Проектный&nbsp;менеджер</p>
+                            <div class="card__experience">ОПыт работы 8 лет</div>
+                        </div>
+                    </div>
+                    <div class="card command__card animate__animated animate__fadeInLeft wow animate__delay-1s">
+                        <div class="card__icon"><img src="./img/design-icon.svg" alt="design"></div>
+                        <div class="card__image">
+                            <img src="./img/command-2.webp" alt="repair">
+                        </div>
+                        <div class="card__text command__card-text">
+                            <div class="card__name">Алиса&nbsp;Сухорукова</div>
+                            <p class="card__role">Дизайнер</p>
+                            <div class="card__experience">Опыт работы 6 лет</div>
+                        </div>
+                    </div>
+                    <div class="card command__card animate__animated animate__fadeInLeft wow animate__delay-2s">
+                        <div class="card__icon"><img src="./img/portfolio-icon.svg" alt="portfolio"></div>
+                        <div class="card__image">
+                            <img src="./img/command-3.webp" alt="repair">
+                        </div>
+                        <div class="card__text command__card-text">
+                            <div class="card__name">Давид&nbsp;Волынев</div>
+                            <p class="card__role">Бригадир</p>
+                            <div class="card__experience">ОПыт работы 7 лет</div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.row -->
+                <p class="section__text command__text animate__animated animate__fadeInDown wow">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
+                <!-- /.section__text command__text-->
             </div>
-            <!-- /.section.container -->
+            <!-- /.container -->
         </section>
         <!-- /.command -->
         <section class="section clients">
