feat: add adaptive for footer

--- a/src/index.html
+++ b/src/index.html
@@ -593,42 +593,44 @@
     <footer class="footer">
         <div class="footer__content">
             <div class="container">
-                <div class="form-wrap footer__form-wrap">
-                    <h3 class="footer__title">Остались вопросы?</h3>
-                    <form class="footer__form">
-                        <div class="footer__input-group">
-                            <label for="footer-name" class="label footer__label label_light">Имя</label>
-                            <input id="footer-name" type="text" name="userName" class="input footer__input input_dark" placeholder="Как вас зовут:">
-                        </div>
-                        <!-- /.footer__input-group -->
-                        <div class="footer__input-group">
-                            <label for="footer-phone" class="label footer__label label_light">Телефон</label>
-                            <input id="footer-phone" type="tel" name="userPhone" class="input footer__input input_dark" placeholder="Ваш номер телефона:">
-                        </div>
-                        <!-- /.footer__input-group -->
-                        <div class="footer__input-group footer__input-group_full">
-                            <label for="footer-question" class="label footer__label label_light">Вопрос</label>
-                            <input id="footer-question" type="text" name="userQuestion" class="input footer__input input_dark" placeholder="Я хочу спросить:">
-                        </div>
-                        <!-- /.footer__input-group -->
-                        <div class="policy footer__policy">
-                            <input id="footer-agree" type="checkbox" name="userPolicy" class="checkbox policy__checkbox" checked>
-                            <label for="footer-agree" class="policy__label policy__label_light">Я соглашаюсь с обработкой данных</label>
-                        </div>
-                        <button class="button footer__button button_primary">Отправить</button>
-                    </form>
-                    <!-- /.footer__form -->
+                <div class="column">
+                    <div class="form-wrap footer__form-wrap">
+                        <h3 class="footer__title">Остались вопросы?</h3>
+                        <form class="footer__form">
+                            <div class="footer__input-group">
+                                <label for="footer-name" class="label footer__label label_light">Имя</label>
+                                <input id="footer-name" type="text" name="userName" class="input footer__input input_dark" placeholder="Как вас зовут:">
+                            </div>
+                            <!-- /.footer__input-group -->
+                            <div class="footer__input-group">
+                                <label for="footer-phone" class="label footer__label label_light">Телефон</label>
+                                <input id="footer-phone" type="tel" name="userPhone" class="input footer__input input_dark" placeholder="Ваш номер телефона:">
+                            </div>
+                            <!-- /.footer__input-group -->
+                            <div class="footer__input-group footer__input-group_full">
+                                <label for="footer-question" class="label footer__label label_light">Вопрос</label>
+                                <input id="footer-question" type="text" name="userQuestion" class="input footer__input input_dark" placeholder="Я хочу спросить:">
+                            </div>
+                            <!-- /.footer__input-group -->
+                            <div class="policy footer__policy">
+                                <input id="footer-agree" type="checkbox" name="userPolicy" class="checkbox policy__checkbox" checked>
+                                <label for="footer-agree" class="policy__label policy__label_light">Я соглашаюсь с обработкой данных</label>
+                            </div>
+                            <button class="button footer__button button_primary">Отправить</button>
+                        </form>
+                        <!-- /.footer__form -->
+                    </div>
+                    <!-- /.form-wrap -->
+                    <p class="footer__text">Ростов на дону, Торговый центр Plaza
+                        Прямой телефон +7 (999) 768 32 99</p>
+                    <!-- /.footer__text -->
+                    <div class="footer__links">
+                        <a href="mailto:sinegamy11@gmail.com" class="footer__link footer__link_mail"></a>
+                        <a href="https://www.instagram.com/adam_ilya11/" class="footer__link footer__link_instagram"></a>
+                    </div>
+                    <!-- /.footer__links -->
+                    <div class="map footer__map"></div>
                 </div>
-                <!-- /.form-wrap -->
-                <p class="footer__text">Ростов на дону, Торговый центр Plaza
-                    Прямой телефон +7 (999) 768 32 99</p>
-                <!-- /.footer__text -->
-                <div class="footer__links">
-                    <a href="mailto:sinegamy11@gmail.com" class="footer__link footer__link_mail"></a>
-                    <a href="https://www.instagram.com/adam_ilya11/" class="footer__link footer__link_instagram"></a>
-                </div>
-                <!-- /.footer__links -->
-                <div class="map footer__map"></div>
             </div>
             <!-- /.container -->
             <div class="footer__menu">
