--- a/src/index.html
+++ b/src/index.html
@@ -584,8 +584,58 @@
                     </div>
                 </div>
                 <!-- /.section-title -->
+                <p class="section__description section__description clients__description animate__animated animate__fadeInDown wow">80% наших клиентов рекомендуют нас своим знакомым и друзьям</p>
+                <!-- /.section__description command__description-->
+                <div class="row">
+                    <div class="col-30 animate__animated animate__fadeInLeft wow">
+                        <div class="card clients__card">
+                            <div class="card__group">
+                                <div class="card__avatar clients__avatar">
+                                    <img src="./img/clients-1.webp" alt="avatar">
+                                </div>
+                                <div class="card__name clients__name">Савельева Екатерина Львовна</div>
+                            </div>
+                            <p class="card__review">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарна, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Цены демократические. Я рекомендую этих мастеров.</p>
+                            <div class="card__info">
+                                <div class="card__area"><span>40 m<sup>2</sup></span></div>
+                                <div class="card__days">48 дней</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-30 animate__animated animate__fadeInLeft wow animate__delay-1s">
+                        <div class="card clients__card">
+                            <div class="card__group">
+                                <div class="card__avatar clients__avatar">
+                                    <img src="./img/clients-2.webp" alt="avatar">
+                                </div>
+                                <div class="card__name clients__name">Большов Михаил Анатольевич</div>
+                            </div>
+                            <p class="card__review">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарен, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Качество высокое. Я рекомендую этих мастеров.</p>
+                            <div class="card__info">
+                                <div class="card__area"><span>90 м<sup>2</sup></span></div>
+                                <div class="card__days">128 дней</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-30 animate__animated animate__fadeInLeft wow animate__delay-2s">
+                        <div class="card clients__card">
+                            <div class="card__group">
+                                <div class="card__avatar clients__avatar">
+                                    <img src="./img/clients-3.webp" alt="avatar">
+                                </div>
+                                <div class="card__name clients__name">Хасанов Даниил Муратович</div>
+                            </div>
+                            <p class="card__review">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарен, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Качество высокое. Цены демократические. </p>
+                            <div class="card__info">
+                                <div class="card__area"><span>56 м<sup>2</sup></span></div>
+                                <div class="card__days">86 дней</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.row -->
             </div>
-            <!-- /.section.container -->
+            <!-- /.container -->
         </section>
         <!-- /.clients -->
     </main>
