fix: add padding section command

--- a/src/index.html
+++ b/src/index.html
@@ -569,7 +569,7 @@
                     </div>
                 </div>
                 <!-- /.row -->
-                <p class="section__text command__text animate__animated animate__fadeInDown wow">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
+                <p class="section__text command__text animate__animated animate__fadeInDown wow">Каждый сотрудник нашей компании является квалифицированным штатным специалистом с опытом работы от 6 лет. У нас нет  гастарбайтеров, каждый сотрудник выполняет работу, соответствующую его специальности.</p>
                 <!-- /.section__text command__text-->
             </div>
             <!-- /.container -->
