--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>repair design</title>
     <link rel="stylesheet" href="css/style.min.css">
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=29e37520-a10a-46d8-a8a8-96155cfbd301&lang=ru_RU"></script>
 </head>
 <body>
     <header class="header">
@@ -679,7 +680,7 @@
                         <a href="https://www.instagram.com/adam_ilya11/" class="footer__link footer__link_instagram"></a>
                     </div>
                     <!-- /.footer__links -->
-                    <div class="map footer__map"></div>
+                    <div id="map" class="map footer__map"></div>
                 </div>
             </div>
             <!-- /.container -->
