feat: add modal form on info send form

--- a/src/index.html
+++ b/src/index.html
@@ -742,6 +742,13 @@
         </div>
     </div>
     <!-- /.modal -->
+    <div class="modal-info">
+        <div class="modal-info__dialog">
+            <a href="#" class="modal-info__close"></a>
+            <p class="modal-info__text"></p>
+        </div>
+    </div>
+    <!-- /.modal-info -->
     <script src="./js/main.min.js"></script>
 </body>
 </html>
