fix: fixed errors validator

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
             <div class="container">
                 <div class="hero__content">
                     <h1 class="title hero__title animate__animated animate__fadeIn wow">
-                        <span class="title__text">турецкий ремонт в&nbsp</span><span class="title__text_primary">Ростове-на-дону</span>
+                        <span class="title__text">турецкий ремонт в&nbsp;</span><span class="title__text_primary">Ростове-на-дону</span>
                     </h1>
                     <p class="hero__text animate__animated animate__fadeIn wow">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
                     <div class="buttons hero__buttons animate__animated animate__fadeInLeft wow">
@@ -55,7 +55,7 @@
                 <div class="row projects__content">
                     <div class="col-50">
                         <div class="section-title section-title_left projects__section-title">
-                            <h2 class="section-title__heading section-title__heading_primary animate__animated animate__fadeInDown wow">Завершенные<div class="section-title__word">проекты</div></h2>
+                            <h2 class="section-title__heading section-title__heading_primary animate__animated animate__fadeInDown wow">Завершенные<span class="section-title__word">проекты</span></h2>
                             <p class="section-title__text animate__animated animate__fadeInDown wow">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
                         </div>
                         <!-- /.section-title -->
@@ -371,7 +371,7 @@
                     <div class="working-methods__text">
                         <div class="section-title section-title_left projects__section-title">
                             <p class="section-title__subtitle animate__animated animate__fadeIn wow">как мы работаем</p>
-                            <h2 class="section-title__heading section-title__heading_primary animate__animated animate__fadeInDown wow">6 шагов<div class="section-title__word">до цели</div></h2>
+                            <h2 class="section-title__heading section-title__heading_primary animate__animated animate__fadeInDown wow">6 шагов<span class="section-title__word">до цели</span></h2>
                         </div>
                         <!-- /.section-title -->
                         <div class="swiper working-methods__swiper animate__animated animate__fadeInLeft wow">
