--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>repair design</title>
     <link rel="stylesheet" href="css/style.min.css">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=29e37520-a10a-46d8-a8a8-96155cfbd301&lang=ru_RU"></script>
+    <script src="https://atuin.ru/demo/wow/wow.js"></script>
 </head>
 <body>
     <header class="header">
@@ -749,6 +750,7 @@
         </div>
     </div>
     <!-- /.modal-info -->
+    <script src="https://atuin.ru/demo/wow/wow.js"></script>
     <script src="./js/main.min.js"></script>
 </body>
 </html>
